--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!--<link rel="icon" type="image/svg+xml" href="./src/favicon.svg" />-->
+  <link rel="icon" type="image/svg+xml" href="./src/favicon.svg" />
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
@@ -11,7 +11,7 @@
 
 <body>
   <div id="root"></div>
-  <!--<script type="module" src="./src/main.jsx"></script>-->
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 
 </html>
